Fix z-index and missing quote

--- a/popup.css
+++ b/popup.css
@@ -21,6 +21,7 @@ h3 {
     align-items: center;
     justify-content: center;
     background-color: #1e1e1e;
+    z-index: 1;
 }
 
 .text > * {
@@ -48,7 +49,7 @@ h3 {
 .header {
     position: fixed;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
 }
 
 .container {
